guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
  annotations:
    link.argocd.argoproj.io/external-link: https://app.komodor.com/main/deep-dive/wspddemo.wspd-demo-default.guestbook
    app.komodor.com/tracked_files: |
      *.yaml
    app.komodor.com/guestbook: https://github.com/damuret/guestbook
    app.komodor.com/guestbook.ref:  e513b3ba0fee5ddae7c46323a04e86b659b3c456 
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
        owner: dan
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-ui
        ports:
        - containerPort: 80
