guestbook/test-progressive.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progressive-no
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: progressive-no
  template:
    metadata:
      labels:
        app: progressive-no
    spec:
      containers:
        - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
          name: guestbook-ui
          ports:
            - containerPort: 80
