guestbook/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    description: A workaround to support a set of backend IPs for solr
    linkerd.io/inject: disabled
  name: solrcloud
subsets:
- addresses:
  - ip: 172.20.10.97
  - ip: 172.20.10.98
  - ip: 172.20.10.99
  - ip: 172.20.10.100
  - ip: 172.20.10.101
  ports:
  - name: solr-http
    port: 8080
