guestbook/guestbook-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-ui
