guestbook/guestbook-ui-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-ui
  type: LoadBalancer
  loadBalancerSourceRanges:
    - 205.207.104.229/32
