guestbook/test-progressive-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: progressive-no
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: progressive-no
