guestbook/guestbook-ui-virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-custom
spec:
  hosts:
  - guestbook-custom
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: guestbook-custom
        subset: v2
  - route:
    - destination:
        host: guestbook-custom
        subset: v1
